--- a/index.html
+++ b/index.html
@@ -1,64 +1,79 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Registro de domicilio</title>
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
-<style>
-  body { font-family: system-ui, Segoe UI, Roboto, Arial, sans-serif; margin: 20px; }
-  #map { height: 420px; border-radius: 8px; border: 1px solid #ddd; }
-  .row { display: grid; gap: 10px; max-width: 520px; }
-  input, button { padding: 10px; font-size: 16px; }
-  button { cursor: pointer; }
-  .hint { color:#555; font-size:14px; margin-top:4px; }
-  #msg { margin-top: 8px; font-weight: 600; }
-</style>
-
-<h2>Registrar domicilio (latitud/longitud)</h2>
-<div class="row">
-  <input id="clave" placeholder="CLAVE DE TRABAJADOR" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Registrar domicilio</title>
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-sA+e2tu1jP2L1jL1S9mZ+7tGk+gkT2yG4nUoFj0zP0k="
+    crossorigin=""
+  />
+  <style>
+    body { text-align: center; font-family: Arial; padding: 10px; }
+    #map { height: 400px; width: 90%; margin: 0 auto; }
+    input, button { margin: 10px; padding: 10px; width: 90%; }
+  </style>
+</head>
+<body>
+  <h2>Registrar domicilio (latitud/longitud)</h2>
+  <input type="text" id="clave" placeholder="CLAVE DE TRABAJADOR" />
   <div id="map"></div>
   <button id="enviar">Enviar</button>
-  <div class="hint">Da clic en el mapa para colocar el marcador. Luego presiona “Enviar”.</div>
-  <div id="msg"></div>
-</div>
+  <p id="mensaje"></p>
 
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-<script>
-  const msg = document.getElementById('msg');
-  const map = L.map('map').setView([19.4326, -99.1332], 9); // CDMX aprox
-  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { attribution:'© OpenStreetMap' }).addTo(map);
+  <script
+    src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-o9N1j7kCz8+zW3v3kUuZb6NjA0jz6zO+5xR0F2jRk8A="
+    crossorigin=""
+  ></script>
+  <script>
+    const map = L.map("map").setView([19.4326, -99.1332], 9);
+    L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
+      attribution: "© OpenStreetMap contributors",
+    }).addTo(map);
 
-  let last = null, marker = null;
-  map.on('click', e => {
-    last = e.latlng;
-    if (marker) marker.setLatLng(last); else marker = L.marker(last).addTo(map);
-  });
+    let marker = null;
+    let position = null;
 
-  document.getElementById('enviar').onclick = async () => {
-    msg.textContent = '';
-    const clave = document.getElementById('clave').value.trim();
-    if (!clave) { msg.textContent = 'Falta CLAVE DE TRABAJADOR.'; return; }
-    if (!last)  { msg.textContent = 'Marca un punto en el mapa.'; return; }
+    map.on("click", (e) => {
+      position = e.latlng;
+      if (marker) marker.remove();
+      marker = L.marker(position).addTo(map);
+    });
 
-    try {
-      const r = await fetch('/api/ubicacion', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ clave, lat: last.lat, lon: last.lng })
-      });
-      if (r.ok) {
-        msg.textContent = 'Registro guardado ✅';
-        document.getElementById('clave').value = '';
-        // opcional: quitar marcador
-        // map.removeLayer(marker); marker = null; last = null;
-      } else {
-        const t = await r.text();
-        msg.textContent = 'Error: ' + t;
+    document.getElementById("enviar").addEventListener("click", async () => {
+      const clave = document.getElementById("clave").value.trim();
+      const mensaje = document.getElementById("mensaje");
+
+      if (!clave || !position) {
+        mensaje.textContent = "Error: Falta la clave o la ubicación.";
+        return;
       }
-    } catch (err) {
-      msg.textContent = 'Error de red: ' + (err?.message || err);
-    }
-  };
-</script>
+
+      mensaje.textContent = "Enviando...";
+
+      try {
+        const res = await fetch("/api/ubicacion", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({
+            clave,
+            lat: position.lat,
+            lon: position.lng,
+          }),
+        });
+
+        const data = await res.json();
+
+        if (!res.ok) throw new Error(data.message || "Error desconocido");
+        mensaje.textContent = "✅ Ubicación guardada correctamente.";
+      } catch (err) {
+        mensaje.textContent = "Error: " + err.message;
+        console.error(err);
+      }
+    });
+  </script>
+</body>
 </html>
