--- a/index.html
+++ b/index.html
@@ -4,33 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Registrar domicilio</title>
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    integrity="sha256-sA+e2tu1jP2L1jL1S9mZ+7tGk+gkT2yG4nUoFj0zP0k="
-    crossorigin=""
-  />
+
+  <!-- Leaflet CSS (sin integrity/crossorigin) -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+
   <style>
-    body {
-      text-align: center;
-      font-family: Arial, sans-serif;
-      padding: 10px;
-    }
-    #map {
-      height: 400px;
-      width: 90%;
-      margin: 10px auto;
-      border: 1px solid #ccc;
-    }
-    input, button {
-      margin: 10px;
-      padding: 10px;
-      width: 90%;
-      font-size: 1em;
-    }
-    button {
-      cursor: pointer;
-    }
+    body { text-align:center; font-family: Arial, sans-serif; padding:10px; }
+    #map { height: 420px; width: 92%; margin: 12px auto; border:1px solid #ccc; }
+    input, button { width: 92%; padding:10px; margin:10px auto; font-size:1rem; }
+    button { cursor:pointer; }
+    #mensaje { margin-top:8px; }
   </style>
 </head>
 <body>
@@ -40,24 +23,22 @@
   <button id="enviar">Enviar</button>
   <p id="mensaje"></p>
 
-  <script
-    src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-    integrity="sha256-o9N1j7kCz8+zW3v3kUuZb6NjA0jz6zO+5xR0F2jRk8A="
-    crossorigin=""
-  ></script>
+  <!-- Leaflet JS (sin integrity/crossorigin) -->
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
   <script>
-    // Esperar a que el DOM cargue antes de inicializar el mapa
     window.addEventListener("DOMContentLoaded", () => {
-      const mapElement = document.getElementById("map");
-      if (!mapElement) {
-        console.error("No se encontró el contenedor del mapa (#map)");
+      const msg = document.getElementById("mensaje");
+
+      // Si Leaflet no cargó, avisa y detén.
+      if (typeof L === "undefined") {
+        msg.textContent = "Error: no se pudo cargar Leaflet. Revisa tu conexión o bloqueadores.";
         return;
       }
 
-      const map = L.map(mapElement).setView([19.4326, -99.1332], 9);
+      const map = L.map("map").setView([19.4326, -99.1332], 9);
       L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
-        attribution: "© OpenStreetMap contributors",
+        attribution: "© OpenStreetMap contributors"
       }).addTo(map);
 
       let marker = null;
@@ -71,32 +52,24 @@
 
       document.getElementById("enviar").addEventListener("click", async () => {
         const clave = document.getElementById("clave").value.trim();
-        const mensaje = document.getElementById("mensaje");
-
         if (!clave || !position) {
-          mensaje.textContent = "Error: Falta la clave o la ubicación.";
+          msg.textContent = "Error: falta la clave o seleccionar un punto en el mapa.";
           return;
         }
-
-        mensaje.textContent = "Enviando...";
+        msg.textContent = "Enviando...";
 
         try {
-          const res = await fetch("/api/ubicacion", {
+          const r = await fetch("/api/ubicacion", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({
-              clave,
-              lat: position.lat,
-              lon: position.lng,
-            }),
+            body: JSON.stringify({ clave, lat: position.lat, lon: position.lng })
           });
-
-          const data = await res.json();
-          if (!res.ok) throw new Error(data.message || "Error desconocido");
-          mensaje.textContent = "✅ Ubicación guardada correctamente.";
-        } catch (err) {
-          mensaje.textContent = "Error: " + err.message;
-          console.error(err);
+          const data = await r.json();
+          if (!r.ok) throw new Error(data?.message || "Error desconocido");
+          msg.textContent = "✅ Ubicación guardada correctamente.";
+        } catch (e) {
+          console.error(e);
+          msg.textContent = "Error: " + (e.message || e);
         }
       });
     });
