--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     // ========================
     // Config
     // ========================
-    const CSV_URL = '/public/rutas.csv';   // tu archivo está en /public → se sirve como /rutas.csv
+    const CSV_URL = '/rutas.csv';   // tu archivo está en /public → se sirve como /rutas.csv
 
     // ========================
     // Capas base (Mapa / Satélite)
