--- a/index.html
+++ b/index.html
@@ -22,19 +22,39 @@
     :root { color-scheme: light dark; }
     body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; margin: 24px; }
     h1 { font-size: 22px; text-align: center; margin-bottom: 16px; }
-    #clave { width: 100%; padding: 10px 12px; font-size: 16px; margin-bottom: 10px; }
+    .grid { display: grid; grid-template-columns: 1fr; gap: 10px; margin-bottom: 12px; }
+    label { font-size: 14px; font-weight: 600; }
+    input, select { width: 100%; padding: 10px 12px; font-size: 16px; }
     .toolbar { display: flex; gap: 8px; align-items: center; margin: 8px 0 12px; flex-wrap: wrap; }
     .toolbar button { padding: 8px 10px; font-size: 14px; cursor: pointer; }
     #map { height: 460px; border: 1px solid #ddd; border-radius: 8px; }
     #enviar { width: 100%; margin-top: 14px; padding: 12px; font-size: 16px; }
     #mensaje { margin-top: 10px; min-height: 22px; text-align: center; }
     .leaflet-control-geocoder input { font-size: 14px; }
+    .row { display:flex; gap:10px; flex-wrap:wrap; }
+    .row > * { flex:1 1 280px; }
+    .muted { font-size: 12px; opacity: .8; }
   </style>
 </head>
 <body>
   <h1>Registrar domicilio (latitud/longitud)</h1>
 
-  <input id="clave" placeholder="CLAVE DE TRABAJADOR" />
+  <div class="grid">
+    <div class="row">
+      <div>
+        <label for="clave">CLAVE DE TRABAJADOR</label>
+        <input id="clave" placeholder="CLAVE DE TRABAJADOR" />
+      </div>
+      <div>
+        <label for="ruta">RUTA</label>
+        <select id="ruta">
+          <option value="">— Selecciona una ruta —</option>
+          <!-- Se llenará al leer rutas.csv -->
+        </select>
+        <div class="muted" id="rutaInfo"></div>
+      </div>
+    </div>
+  </div>
 
   <div class="toolbar">
     <button id="btnRutas" type="button">Rutas</button>
@@ -46,7 +66,7 @@
   <button id="enviar">Enviar</button>
   <div id="mensaje"></div>
 
-  <!-- JS: Leaflet, Geocoder, PapaParse -->
+  <!-- JS: Leaflet, Geocoder, PapaParse, Turf -->
   <script
     src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
@@ -54,6 +74,7 @@
   </script>
   <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
   <script src="https://unpkg.com/papaparse@5.4.1/papaparse.min.js"></script>
+  <script src="https://unpkg.com/@turf/turf@6.5.0/turf.min.js"></script>
 
   <script>
     // ========================
@@ -63,164 +84,4 @@
       attribution: "© OpenStreetMap contributors"
     });
     const capaSatelite = L.tileLayer(
-      "https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}",
-      { attribution: "© Esri, Maxar, Earthstar Geographics" }
-    );
-
-    const map = L.map("map", {
-      center: [19.4326, -99.1332], // CDMX
-      zoom: 11,
-      layers: [capaMapa]
-    });
-
-    const capasBase = { "🗺️ Mapa": capaMapa, "🛰️ Satélite": capaSatelite };
-    L.control.layers(capasBase).addTo(map);
-    map.attributionControl.addAttribution("Geocoding © Nominatim");
-
-    // ========================
-    // Buscador (geocoder)
-    // ========================
-    L.Control.geocoder({
-      defaultMarkGeocode: false,
-      collapsed: false,
-      placeholder: "Buscar lugar...",
-      geocodingQueryParams: { countrycodes: "mx" }
-    })
-    .on("markgeocode", function (e) {
-      const { center, name, bbox } = e.geocode;
-      if (bbox) map.fitBounds(bbox);
-      else map.flyTo(center, 16);
-      if (marker) marker.setLatLng(center);
-      else marker = L.marker(center).addTo(map);
-      last = center;
-      marker.bindPopup(name).openPopup();
-    })
-    .addTo(map);
-
-    // ========================
-    // Marcador manual
-    // ========================
-    let marker = null, last = null;
-    map.on("click", (e) => {
-      last = e.latlng;
-      if (marker) marker.setLatLng(last);
-      else marker = L.marker(last).addTo(map);
-    });
-
-    // ========================
-    // Rutas desde CSV (toggle)
-    // ========================
-    const rutasLayer = L.layerGroup();
-    let rutasCargadas = false;
-    let rutasVisibles = false;
-
-    function colorPorTexto(txt) {
-      let h = 0;
-      for (let i = 0; i < txt.length; i++) h = (h * 31 + txt.charCodeAt(i)) >>> 0;
-      return `hsl(${h % 360} 80% 45%)`;
-    }
-
-    async function cargarRutasDesdeCSV(url = "rutas.csv") {
-      // Lee el CSV que está al mismo nivel que index.html (ruta RELATIVA)
-      const text = await (await fetch(url)).text();
-      const parsed = Papa.parse(text, { header: true, dynamicTyping: true, skipEmptyLines: true });
-      const rows = parsed.data;
-
-      // Agrupar por Ruta
-      const grupos = new Map();
-      for (const r of rows) {
-        const Ruta = String(r.Ruta ?? "").trim();
-        const Orden = Number(r.Orden);
-        const Lat = Number(r.Latitud);
-        const Lon = Number(r.Longitud);
-        if (!Ruta || Number.isNaN(Orden) || Number.isNaN(Lat) || Number.isNaN(Lon)) continue;
-        if (!grupos.has(Ruta)) grupos.set(Ruta, []);
-        grupos.get(Ruta).push({ Orden, Lat, Lon });
-      }
-
-      // Crear polilíneas + puntos
-      rutasLayer.clearLayers();
-      grupos.forEach((pts, ruta) => {
-        pts.sort((a, b) => a.Orden - b.Orden);
-        const latlngs = pts.map(p => [p.Lat, p.Lon]);
-        const color = colorPorTexto(ruta);
-
-        const pl = L.polyline(latlngs, { color, weight: 3, opacity: 0.9 })
-          .bindTooltip(`Ruta: ${ruta}`, { sticky: true });
-        pl.addTo(rutasLayer);
-
-        pts.forEach(p => {
-          L.circleMarker([p.Lat, p.Lon], {
-            radius: 3.5, color, weight: 1, fillOpacity: 0.8
-          })
-          .bindTooltip(`Ruta: ${ruta} • Orden: ${p.Orden}`, { sticky: true })
-          .addTo(rutasLayer);
-        });
-      });
-
-      rutasCargadas = true;
-    }
-
-    async function toggleRutas() {
-      if (!rutasVisibles) {
-        if (!rutasCargadas) {
-          try {
-            await cargarRutasDesdeCSV("rutas.csv"); // ¡ruta relativa!
-          } catch (e) {
-            alert("No se pudieron cargar las rutas: " + (e?.message || e));
-            return;
-          }
-        }
-        rutasLayer.addTo(map);
-        rutasVisibles = true;
-        btnRutas.textContent = "Rutas (ocultar)";
-      } else {
-        rutasLayer.removeFrom(map);
-        rutasVisibles = false;
-        btnRutas.textContent = "Rutas";
-      }
-    }
-
-    const btnRutas = document.getElementById("btnRutas");
-    btnRutas.addEventListener("click", toggleRutas);
-
-    // ========================
-    // Envío de datos a /api/ubicacion
-    // ========================
-    const msg = document.getElementById("mensaje");
-
-    document.getElementById("enviar").addEventListener("click", async () => {
-      msg.textContent = "";
-
-      const clave = document.getElementById("clave").value.trim();
-      if (!clave) { msg.textContent = "Falta CLAVE DE TRABAJADOR."; return; }
-      if (!last)  { msg.textContent = "Marca un punto en el mapa."; return; }
-
-      try {
-        const r = await fetch("/api/ubicacion", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ clave, lat: last.lat, lon: last.lng })
-        });
-
-        const raw = await r.text();
-        let data = {};
-        try { data = JSON.parse(raw); } catch (_) {}
-
-        if (!r.ok) {
-          const supa = data?.supabase;
-          msg.textContent = `Error: ${data?.message || r.statusText}` +
-            (supa ? ` | code=${supa.code || ""} | message=${supa.message || ""} | details=${supa.details || ""}` :
-                    ` | raw="${raw.slice(0,200)}"`);
-          return;
-        }
-
-        msg.textContent = "✅ Registro guardado";
-        document.getElementById("clave").value = "";
-      } catch (e) {
-        msg.textContent = "Error de red: " + (e?.message || e);
-      }
-    });
-  </script>
-</body>
-</html>
+      "https://server.arcgisonline.com/ArcGIS/rest/services/W
